# p1_repository

./: README.md
Linefollower/: CMakeLists.txt  package.xml
Linefollower/include/: linedetect.hpp  turtlebot.hpp
Linefollower/launch/: lf.launch
Linefollower/src/: detect.cpp  linedetect.cpp  motion_node.cpp  turtlebot.cpp
Linje/: CMakeLists.txt  package.xml
Linje/src/: Bat.cpp  Hard.cpp  andreas  andreas2  docksub.cpp  pubsub.cpp  rundt.cpp  test.cpp  vacuum.cpp  vacuum2.cpp
OpgaverP1/: CMakeLists.txt  package.xml
OpgaverP1/src/: Class1  Class1.cpp  code1.cpp  code2.cpp  test.cpp
battery_check/: CMakeLists.txt  batterikodepublishertilnavigation  package.xml  recall_1point.cpp
battery_check/src/: Navigation.cpp  PubBatteri.cpp  SubBatteri.cpp  bat  battery  battery.cpp  battery1.cpp  lige.cpp  ny.cpp
battery_check_old/: CMakeLists.txt  package.xml
battery_check_old/src/: lige.cpp
camera/: CMakeLists.txt  package.xml
camera/Pics/: Middle
camera/src/: 2.cpp  starttest.cpp
docking/: CMakeLists.txt  package.xml
docking/src/: call_dock.cpp  dock.cpp
final_pkg/: CMakeLists.txt
final_pkg/launch/: lacus.launch
final_pkg/src/: lacus.launch
line_follower_turtlebot/Linefollower/src/: detect.cpp
linefollowertest/include/: linedetect.hpp  turtlebot.hpp
linefollowertest/src/: detect.cpp  linedetect.cpp  motion_node.cpp  turtlebot.cpp
opencv_example-master/: CMakeLists.txt
pkg1/: CMakeLists.txt  package.xml  recall_1point.cpp
pkg1/src/: linedriving.cpp  plugged.cpp  recall_1point.cpp
pkg2/: CMakeLists.txt  package.xml
pkg22/: CMakeLists.txt  package.xml
pkg3/: CMakeLists.txt  package.xml
pkg404/: CMakeLists.txt  package.xml
pkgChr/: CMakeLists.txt  package.xml
pkgkasper/: CMakeLists.txt  make_box.cpp  package.xml  somecode.cpp
pub_bat/: CMakeLists.txt  package.xml
pub_bat/src/: pubba.cpp  subba.cpp
rapport/: CMakeLists.txt  package.xml
rooms/: CMakeLists.txt  package.xml
rooms/src/: navigation.cpp  room1.cpp  room2.cpp  room3.cpp
rrooms/: CMakeLists.txt  package.xml
rrooms/src/: rroom1.cpp  rroom2  rroom2.cpp  rroom3  rroom3.cpp
testben/: CMakeLists.txt  package.xml
turtlebot2_move/: CMakeLists.txt  package.xml
turtlebot2_move/src/: room_1.cpp
